--- a/Python Fundamentals Part 3.ipynb
+++ b/Python Fundamentals Part 3.ipynb
@@ -3,24 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "uTbaB5emrWjm"
-      },
-      "source": [
-        "## Part 3 Agenda\n",
-        "* functions\n",
-        "  * positional arguments\n",
-        "  * keyword arguments\n",
-        "  * default arguments\n",
-        "  * variable positional arguments\n",
-        "  * variable keyword arguments\n",
-        "* exception handling\n",
-        "* command-line arguments\n",
-        "* modules"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Bd5xF6zVrWjn"
       },
       "source": [
@@ -76,28 +58,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "uC9P94ttrWjo"
       },
       "outputs": [],
       "source": [
-        "def simpfunc(x):\n",
-        "    if x == 1:\n",
-        "        print('Hey, x is 1')\n",
-        "    elif x < 10:\n",
-        "        print('x is < 10 and not 1')\n",
+        "# Silly function which does not return anything, but rather, prints something\n",
+        "# based on the value of its argument\n",
+        "def simpfunc(thing):\n",
+        "    if thing == 1:\n",
+        "        print('Hey, 1')\n",
+        "    elif thing < 10:\n",
+        "        print('< 10 and not 1')\n",
         "    else:\n",
-        "        print('x >= 10')"
+        "        print('>= 10')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "vzhwS5iYrWjo"
+        "id": "vzhwS5iYrWjo",
+        "outputId": "3a947524-18dd-4a8f-e197-9825928bcb8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hey, 1\n"
+          ]
+        }
+      ],
       "source": [
         "simpfunc(1)"
       ]
@@ -149,7 +145,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "2xZN6frWrWjo"
       },
@@ -181,7 +177,7 @@
       "source": [
         "## Functions (cont'd)\n",
         "* __`help(func)`__ prints out formatted docstring\n",
-        "* __`func.__doc__`__ prints out raw docstring"
+        "* _`func.__doc__`_ prints out raw docstring"
       ]
     },
     {
@@ -219,13 +215,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
-        "id": "fbG7JtJkrWjp"
+        "id": "fbG7JtJkrWjp",
+        "outputId": "8cc03d5a-82db-452e-ed78-310f8e9de8c8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "1.75"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ],
       "source": [
-        "print(rounder25(-1.75))"
+        "rounder25(1.75)"
       ]
     },
     {
@@ -274,13 +285,12 @@
       },
       "source": [
         "## Functions: positional arguments\n",
-        "* arguments are passed to functions in order written\n",
-        "* downside: you must remember meaning of each position"
+        "* arguments are passed to functions in order written"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "id": "njFZFMbMrWjp"
       },
@@ -411,7 +421,7 @@
         "## Lab: functions\n",
         "* write at least one of these functions, take your pick...\n",
         "  * __`calculate`__ which is passed two operands and an operator and returns the calculated result, e.g., __`calculate(2, 4, '+')`__ would return 6\n",
-        "  * Given a string, the function returns True or False whether the string is a pangram\n",
+        "  * Given a string, the function returns __`True`__ or __`False`__ whether the string is a pangram\n",
         "  * Given an integer as a parameter, the function sums up its digits. If the resulting sum contains more than 1 digit, the function should sum the digits again, e.g., __`sumdigits(1235)`__ should compute the sum of 1, 2, 3, and 5 (11), then compute the sum of 1 and 1, returning 2.\n",
         "  * Given a number as a parameter and returns a string version of the number with commas representing thousands, e.g., __`add_commas(12345)`__ would return \"12,345\"\n",
         "  * Demonstrate the Collatz Conjecture:\n",
@@ -677,7 +687,7 @@
         "id": "akKpjIy_rWjt"
       },
       "source": [
-        "![alt-text](images/exceptions.png \"exceptions\")\n"
+        "https://w3.cs.jmu.edu/spragunr/CS240_F14/activities/exceptions/exceptions.shtml"
       ]
     },
     {
